# GW2425_DX12_Particles_Renderer

./: README.md
ParticlesRenderer/: CMakeLists.txt  GenerateProjectFiles.bat  README.md  log.txt  logCPU.txt  logGPU.txt
ParticlesRenderer/DX12Lib/: CMakeLists.txt
ParticlesRenderer/DX12Lib/inc/dx12lib/: CommandList.h  StructuredBuffer.h  VertexTypes.h
ParticlesRenderer/DX12Lib/src/: CommandList.cpp  Device.cpp  GUI.cpp  Mesh.cpp  StructuredBuffer.cpp  Texture.cpp  UploadBuffer.cpp  VertexTypes.cpp
ParticlesRenderer/Data/Shaders/03-Textures/: GeometryShader.cso  MeshShader.cso  PixelShader.cso  UnlitPixelShader.cso  VertexShader.cso
ParticlesRenderer/Data/Shaders/04-HDR/: HDR_PS.cso  HDR_VS.cso  HDRtoSDR_PS.cso  HDRtoSDR_VS.cso  Skybox_PS.cso  Skybox_VS.cso  Unlit_PS.cso
ParticlesRenderer/Data/Shaders/05-Models/: Basic_VS.cso  Decal_PS.cso  Lighting_PS.cso  Unlit_PS.cso
ParticlesRenderer/build_vs2022/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LearningDirectX12.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
ParticlesRenderer/build_vs2022/DX12Lib/: DX12Lib.vcxproj  DX12Lib.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
ParticlesRenderer/build_vs2022/GameFramework/: GameFramework.vcxproj  GameFramework.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
ParticlesRenderer/build_vs2022/samples/03-Textures/: 03-Textures.vcxproj  03-Textures.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
ParticlesRenderer/samples/03-Textures/: CMakeLists.txt
ParticlesRenderer/samples/03-Textures/inc/: Camera.h  FPSCounter.h  Mat.h  MemoryCounter.h  Particle.h  ParticleSystem.h  TestApplication.h
ParticlesRenderer/samples/03-Textures/shaders/: GeometryShader.hlsl  MeshShader.hlsl  PixelShader.hlsl  VertexShader.hlsl
ParticlesRenderer/samples/03-Textures/src/: Camera.cpp  FPSCounter.cpp  Mat.cpp  MemoryCounter.cpp  Particle.cpp  ParticleSystem.cpp  TestApplication.cpp  main.cpp
